# horizon_etl

./: .dockerignore  .env.example  .flake8  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  app.py  check_gustavo.py  check_schema.py  check_types.py  chromedriver  debug_db.py  docker-compose.yml  entrypoint.sh  find_inconsistencies.py  gustavo_details.py  implementation_plan.md  init_db.py  investigate_338.py  investigate_name.py  lattes.config  mkdocs.yml  pyproject.toml  requirements.txt  task.md  test_db_connection.py  test_matcher.py  walkthrough.md
.agent/: AGENT.md  constitution.md
.githooks/: pre-commit
.github/: pull_request_template.md
.prefect/: prefect.db  prefect.db-shm  prefect.db-wal
.specify/: feature.json  init-options.json  integration.json
cache/: 0082588377275398  0301147577506989  1902497507486240  2650921349694794  3539297708118726  3550111932609658  3651077981942079  4261626566157032  4332944687727598  4404912914498937  5589662366089944  6927212610032092  7614206164174151  7923759097083335  8223626264677830  8365543719828195  8400407353673370  8617069437130629  8629256330944049  8771088249434104  8826584877205264  9583314331960942
db/: create_db.py  horizon.db
docs/: README.md  architecture.md  backlog.md  documentation-map.md  flows-and-entrypoints.md  implementation_plan.md  index.md  lattes-research-domain-gaps.md  outputs-and-artifacts.md  researcher-classification.md  solution-overview.md  walkthrough.md
horizon_etl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
output/: cobertura_openalex.csv  dicionario_dados.md  estudos_de_caso_ref.md  exemplo_secao_didatica.html  facto_projetos.csv  gini_segregado.csv  janelas_temporais.csv  lacunas_e_recomendacoes.md  matriz_payback_cahs.csv  metricas_roi_pesquisa.csv  openalex_busca_nome_29.json  patentes_worklist_inpi.csv  plano_curto_prazo.json  por_coordenador.csv  relatorio_roi_pesquisa.html  relatorio_roi_pesquisa.json  relatorio_roi_pesquisa.md  roi_intermediate.json
scripts/: benchmark.py  cleanup_legacy_fellowships.py  (+13 more)
(+1440 files in other folders)
